---------------------------------------------------------------------------------------------------
Version: 1.1.15
  Bugfixes:
    - Special vanilla with omnicrystal not working
    - omnicrystal failing when analysing inactive recipes
---------------------------------------------------------------------------------------------------
Version: 1.1.14
  Features:
    - Removed dependancy on bobs mods
    - Added 2 new ores (Meta-Garnierite, Nova-Leucoxene)
    - Added a new mixed sorting tier for a slightly higher yield of products (exacerbated by prod)
    - Added 5 blended ores (Stannic, Plumbic, Manganic, Titanic, Phosphic)
    - Added support to work with Angels Special-vanilla setting
    - Prepared changes to integrate clowns resources into angels generation code (waiting for the angels update to come through)
    - Added preliminary support for Pyanodons ores, some feedback on balance/usefulness would be good (i have not played Py too much)
  Bugfixes:
    - Removed duplicatated recipes from angels
      - not deleted them yet, just hidden them to prevent base breakage
    - Fixed infinite ores overriding reglar ores if enabled
---------------------------------------------------------------------------------------------------
Version: 1.1.13
  Features:
    - Prepared for updates to angels industries
  Bugfixes:
    - Fixed that I was setting require behind mod checks potentially causing CRC fails in multiplayer
---------------------------------------------------------------------------------------------------
Version: 1.1.12
  Features:
    - Integrated the omnicrystal setting to use angels sorting machines
  Bugfixes:
    - Removed log spam
---------------------------------------------------------------------------------------------------
Version: 1.1.11
  Features:
    - More functional updates in preparation for omnimatter updates
    - Code clean-ups
---------------------------------------------------------------------------------------------------