@@ -3,6 +3,7 @@ Version: 1.1.15
   Bugfixes:
     - Special vanilla with omnicrystal not working
     - omnicrystal failing when analysing inactive recipes
+    - Patched bug with infinite resource mining
 ---------------------------------------------------------------------------------------------------
 Version: 1.1.14
   Features:
